styles/style.css
html {
	scrollbar-color: #a57bb0 #f9f9f9;
}

body {
	padding: 0;
	margin-block-end: 4em;
	scrollbar-color: #a57bb0 #f1f1f1;
}

textarea { 
	resize: block;
	height: 10em;
}

input {
    width: 100%;
}

[v-cloak] {
	display: none !important;
}

/* edit chota-grid variables */
:root {
	--grid-maxWidth: 75rem;
	--grid-gutter: 1.25rem;
}

/* edit vue-select variables */
:root {
	--vs-font-size: 1em;
}

.section-event-display {
	width: auto;
	max-width: calc(min(100svh, 38em));
	container-type: inline-size;
	margin-inline: auto;
}
.event-display {
	container-type: size;
	width: calc(min(100cqw, 100svh, 38em));
	height: calc(min(100cqw, 100svh, 38em) * 0.9);
	margin-inline: auto;
	display: grid;
	justify-items: center;
	align-items: end;
}
.event-square {
	container-type: size;
	grid-row: 1 / 2;
	grid-column: 1 / 2;
	width: 80%;
	aspect-ratio: 1;
	border: 0.4cqw solid #777777;
	display: flex;
	flex-direction: column;
	flex-wrap: nowrap;
	justify-content: center;
	align-items: center;
	padding: 3%;
}
.event-square > * {
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 1cqw;
	flex-wrap: nowrap;
	font-size: 3.7cqw;
}
.event-square .title h1 {
	margin: 2cqh 0 3cqh 0;
}
.event-square .date-and-time {
	
}
.event-square .timezone {
	font-size: 3cqw;
}
.event-square .rsvp {
	
}
.event-square .description {
	flex-grow: 1;
}
.event-square .description div {
	white-space: pre-wrap;
	text-align: center;
}

.calendar-buttons-display {
	container-type: size;
	display: grid;
	justify-items: center;
	align-items: center;
	justify-content: center;
	height: calc(min(100cqw, 100svh, 38em) * 0.2);
	margin-block-end: 3.75rem;
}
@property --cal-scale-numerator { syntax: "<length>"; initial-value: 0px; inherits: false; }
@property --cal-scale-denominator { syntax: "<length>"; initial-value: 0px; inherits: false; }
.calendar-buttons {
	/*
	We want to set transform: scale(calc(100cqw / 33.777rem * 1.1)), however dividing one length
	by another isn't supported well by all browsers (e.g. Firefox mobile), so instead we use some
	complicated length variables as a workaround (see: https://stackoverflow.com/a/79734800)
	*/
	--cal-scale-numerator: 100cqw;
	--cal-scale-denominator: 33.777rem;
	--cal-scale: calc(tan(atan2(var(--cal-scale-numerator), var(--cal-scale-denominator))));
	transform: scale(calc(var(--cal-scale) * 1.1));
	min-width: max-content;
	height: 0; /* if the height was not zero, then the extra size would mess up the scale transformation on some screen sizes*/
}

@media screen and (max-width: 35rem) {
	.event-display {
		width: calc(min(100cqw, 100svh, 38em));
		height: calc(min(100cqw, 100svh, 38em));
	}
	.event-square {
		width: 100%;
	}
	.calendar-buttons {
		transform: scale(calc(var(--cal-scale) * 1.1 * (1 / 0.8)));
	}
}

.section-edit {
	padding-inline: 13px;
}

.icon-button {
	display: flex;
	padding: 0;
	margin: 0;
	background-color: #f1f1f1;
	color: #4a4a4a;
	border-radius: 4px;
	border: 0;
	cursor: pointer;
	box-sizing: border-box;
	align-items: center;
    justify-content: center;
}
.icon-button:hover {
	background-color: #982c61;
	color: #f9f9f9;
	outline: 0;
}
.icon-button:focus-visible {
	border: 1px solid #1d7484;
	outline: 0;
}

.time-input-clearable {
	display: flex;
	flex-direction: row;
	gap: 0.8em;
}
.time-input-clearable button.icon-button, .icon-button.timezone-details-toggle-label, .theme-rng-regenerable button.icon-button {
    width: calc(2em + 12px);
	min-width: calc(2em + 12px);
	max-width: calc(2em + 12px);
}
.time-input-clearable button.icon-button {
	margin-bottom: 10px;
}
.time-input-clearable svg.icon-x {
	height: 1.8em;
    width: 1.8em;
}

.timezone-input-collapsible {
	display: grid;
	column-gap: 0.8em;
	row-gap: 0;
	grid-template-columns: 1fr min-content;
	grid-template-areas: 
	    "input toggle"
	    "details details";
}
.timezone-input-collapsible .search-and-select-box {
	grid-area: input;
}
.timezone-details-toggle {
	/* hide the original checkbox (the label is shown instead). don't use "display: none" or
	 * "visibility: hidden" as those also make it get skipped when tabbing with a keyboard */
    grid-area: toggle;
    height: 10px;
    width: 10px;
    opacity: 0;
}
.timezone-details-toggle:focus-visible + .timezone-details-toggle-label {
	/* outline the label whenever anyone tabs to the original checkbox */
	border: 1px solid #1d7484;
    outline: 0;
}
.timezone-details-toggle-label {
	grid-area: toggle;
}
.timezone-details {
	grid-area: details;
	height: 0;
	overflow: hidden;
	transition: height .25s ease-in-out;
	margin-block-end: 10px;
}
.timezone-details-toggle:checked + .timezone-details-toggle-label + .timezone-details {
	height: auto;
}
.timezone-details-toggle-label svg.icon-info {
	height: 1.3em;
    width: 1.3em;
}
.timezone-details-heading {
	margin-top: 0.8rem;
}

.theme-rng-regenerable {
	display: flex;
	flex-direction: row;
	gap: 0.8em;
}
.theme-rng-regenerable button.icon-button {
	margin-bottom: 10px;
}
.theme-rng-regenerable svg.icon-repeat {
	height: 1.3em;
    width: 1.3em;
}
.row.background-inputs .image-url, .row.background-inputs .theme {
	flex-grow: 10;
}
.row.background-inputs .rng {
	flex-grow: 1;
}

/* attempt to hide the native date picker. this only works on some platforms,
 * so other platforms will still show the date picker (this is the best we can do) */
.date-nopicker::-webkit-inner-spin-button,
.date-nopicker::-webkit-calendar-picker-indicator {
    display: none;
    -webkit-appearance: none;
}

/* copy the form input styling from sakura.css and apply this to search-and-select boxes too */
.search-and-select-box .vs__dropdown-toggle {
	color: #4a4a4a;
    padding: 4px 1px 6px 1px;
    background-color: #f1f1f1;
    border: 1px solid #f1f1f1;
    border-radius: 4px;
    box-shadow: none;
    box-sizing: border-box;
}
.search-and-select-box .vs__dropdown-toggle:focus-within {
	border: 1px solid #1d7484;
	outline: 0;
}
/* fix clipped x and v buttons */
.search-and-select-box svg {
	max-width: revert;
}
/* fix subtly different font size inside search and select box between 'typing' and 'option selected' modes */
.search-and-select-box .vs__selected, .search-and-select-box .vs__selected:focus {
    line-height: var(--vs-line-height);
    font-size: var(--vs-font-size);
}
/* wrap overflow for long timezone names nicely (the default is messy) */
.search-and-select-box .vs__selected-options {
	flex-wrap: nowrap;
    container-type: inline-size;
}
.search-and-select-box .vs__selected {
	max-width: 90%;
	word-wrap: break-word;
	display: inline;
}

.links-list {
	display: flex;
	flex-direction: column;
	gap: 1.25rem;
}

.url-preview-row, .url-preview {
    display: flex;
	flex-direction: row;
	justify-content: flex-start;
	align-items: center;
}
.url-preview-row {
    flex-wrap: nowrap;
	gap: 0.8rem;
}
.url-preview {
	flex-grow: 1;
	gap: 0.4rem;
	padding: 0.6rem;
	border-radius: 4px;
	background-color: #f1f1f1;
	overflow-x: scroll;
	-webkit-overflow-scrolling: touch;
	flex-wrap: nowrap;
}
.url-preview:focus-visible {
	outline: 1px solid #1d7484;
}
.url-preview .url-base {
	text-transform: uppercase;
	font-size: 0.7em;
	font-weight: bold;
	color: #A57BB0;
}
.url-preview .hash-icon-container {
	display: inline-grid;
	place-items: center;
}
.url-preview svg.hash-icon {
    grid-area: 1 / 2 / 1 / 2;
	min-width: 1.25rem;
	height: 1.25rem;
	width: 1.25rem;
	color: #A57BB0;
}
.url-preview .hash-text {
	grid-area: 1 / 2 / 1 / 2;
	font-size: 0.75rem;
	color: transparent;
}
.url-preview code {
	/*word-break: break-all;*/
	white-space: nowrap;
	flex-grow: 1;
	padding: 0;
}
.url-preview-row .icon-button.copy-button {
    height: stretch;
	width: calc(2em + 12px);
	min-width: calc(2em + 12px);
	max-width: calc(2em + 12px);
}
.url-preview-row .copy-button svg {
	height: 1.5rem;
	width: 1.5rem;
}

.url-stats, .timezone-details {
    display: flex;
	align-items: center;
	gap: 0.3125rem;
	font-size: 0.8em;
}
.url-stats {
	margin-block-end: 0.5em;
}
.url-stats {
	flex-direction: row;
	justify-content: center;
	flex-wrap: wrap;
}
.timezone-details {
	flex-direction: column;
	justify-content: start;
}
.url-stats .compatibility-heading, .timezone-details .timezone-details-heading {
	text-transform: uppercase;
	font-size: 0.8em;
	font-weight: bold;
}

.section-faq {
	margin-block-start: 6.25rem;
	padding-inline: 13px;
}
.section-faq p {
	font-size: 0.8em;
}

